# data-studio-agent

./: .gitignore  Cargo.toml  README.md  clippy.toml  codecov.yml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
crates/agent-lib/: Cargo.toml
crates/agent-lib/src/: compact.rs  harness.rs  lib.rs  loop_runner_support.rs  provider_adapter.rs  tools.rs  traits.rs
crates/agent-lib/src/capabilities/: types.rs
crates/agent-lib/src/chat_formatter/: openai.rs
crates/agent-lib/src/common/: format.rs  http_client.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs  session_store.rs
docs/: architecture.md  integration.md
src/: compact.rs  conversation.rs  harness.rs  lib.rs  loop_runner.rs  loop_runner_support.rs  model_registry.rs  provider_adapter.rs  token_counter.rs  tool_executor.rs  traits.rs
src/capabilities/: registry.rs  types.rs
src/chat_formatter/: anthropic.rs  mod.rs  openai.rs
src/common/: format.rs  http_client.rs  mod.rs
src/storage/: db.rs  mod.rs  session_store.rs
