[package]
name = "data-studio-agent-lib"
version = "0.1.0"
edition = "2021"
description = "Shared agent framework for database studio apps — provider adapters, chat formatters, agent loop, context compaction"

[dependencies]
async-openai = { version = "0.32", features = ["chat-completion"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.7"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
uuid = { version = "1", features = ["v4"] }
