[package]
name = "data-studio-agent-storage-sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed SessionStore implementation for data-studio-agent-lib"

[dependencies]
data-studio-agent-lib = { path = "../agent-lib" }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt"] }
uuid = { version = "1", features = ["v4"] }
